fix problem with animations not wokring on firefox

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,8 +61,8 @@
   display: block;
   position: relative;
   aspect-ratio: 16/9;
-  width: 0%;
-  height: auto;
+  width: 0px;
+  height: 100%;
   overflow: hidden;
   border-radius: 4rem;
 }
@@ -76,7 +76,7 @@
 }
 
 .text--open .expanding-text-img {
-  width: 100%;
+  width:300px;
 }
 
 .anim {
@@ -86,7 +86,7 @@
 
 .block {
   grid-area: block;
-  margin: 50px 0px;
+  margin: 90px 0px;
   max-width: 400px;
   line-height: 1.5;
   font-size: 18px;
